--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port:0
 spring.application.name=icms
+spring.datasource.url=jdbc:postgresql://localhost:5432/icmDB
+spring.datasource.username=vaibhav
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
