Authentication Phase Complete & Updated Roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port:8080
+server.port=8080
 spring.application.name=icms
 spring.datasource.url=jdbc:postgresql://localhost:5432/icmDB
 spring.datasource.username=vaibhav
@@ -6,3 +6,7 @@ spring.datasource.username=vaibhav
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#Json Web Token configuration
+jwt.secret=2pS2RRlCnZSVRVEkzBOu9Op9O8TyS2Jj1BwBxP7RucY=
+jwt.expiration=86400000  
