Project Member Phase Completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=vaibhav
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
 
 #Json Web Token configuration
 jwt.secret=2pS2RRlCnZSVRVEkzBOu9Op9O8TyS2Jj1BwBxP7RucY=
